# FastAPI-Test

./: .gitignore  README.md  poetry.toml  pyproject.toml  test.sh
.github/workflows/: ci.yml
fastapi_1/: main.py
fastapi_1/app/models/: users.py
fastapi_1/app/schemas/: users.py
fastapi_2/: main.py
fastapi_2/app/models/: movies.py  users.py
fastapi_2/app/schemas/: movies.py  users.py
fastapi_3/: main.py
fastapi_3/app/models/: movies.py  users.py
fastapi_3/app/schemas/: movies.py  users.py
fastapi_4/app/: __init__.py  conftest.py  main.py
fastapi_4/app/apis/v1/: meeting_router.py  test_meeting_router_mysql.py
fastapi_4/app/configs/: base_config.py  tortoise_config.py
fastapi_4/app/dtos/: get_meeting_response.py
fastapi_4/app/tests/apis/v1/: meeting_router.py  test_meeting_router_mysql.py
fastapi_4/app/tortoise_models/: meeting.py
