[tool.poetry]
name = "poetry add -dev mypy black ruff"
version = "0.1.0"
description = "poetry add fastapi"
authors = ["poetry add fastapi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
