[tool.poetry]
package-mode = false
name = "녹화강의 fastapi"
version = "0.1.0"
description = ""
authors = ["unkn0wn-j <wjsrnr470@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"
pytest = "8.3.4"
coverage = "7.6.9"
pytest-asyncio = "0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"

[tool.mypy]
plugins =["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.covaerage.run]
omit = ["*/test_*.py"]



[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

